--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
@@ -37,6 +37,8 @@
       programName: appraisal-program-name
       icon: Interface/Actions/shop.png
     - type: AppraisalCartridge
+      disposable: true
+      autoInstall: true
 
 # Not a PDA cartridge (then why is this here)
 - type: entity
