--- a/Resources/Prototypes/_NF/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/_NF/Loadouts/role_loadouts.yml
@@ -16,7 +16,7 @@
   - ContractorEars
   - ContractorEncryptionKey
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorUtility
   - ContractorFun
@@ -41,7 +41,7 @@
   - PilotEars
   - ContractorEncryptionKey
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorUtility
   - ContractorFun
@@ -66,7 +66,7 @@
   - MercenaryEars
   - ContractorEncryptionKey
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorUtility
   - ContractorFun
@@ -88,7 +88,7 @@
   - ContractorEars
   - ContractorEncryptionKey
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorFun
   - ContractorTrinkets
@@ -108,7 +108,7 @@
   - ContractorEars
   - ContractorEncryptionKey
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorFun
   - ContractorTrinkets
@@ -126,7 +126,7 @@
   - ContractorEars
   - ContractorEncryptionKey
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorFun
   - ContractorTrinkets
@@ -147,7 +147,7 @@
   - ContractorBelt
   - StcEars
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorFun
   - ContractorTrinkets
@@ -168,7 +168,7 @@
   - ContractorBelt
   - StationRepEars
   - ContractorBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorFun
   - ContractorTrinkets
@@ -188,7 +188,7 @@
   - SecurityGuardBelt
   - SecurityGuardEars
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -211,7 +211,7 @@
   - NfsdBelt
   - NfsdEarsBrown
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -232,7 +232,7 @@
   - NfsdBelt
   - NfsdEarsBrown
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -254,7 +254,7 @@
   - BrigmedicBelt
   - NfsdEarsCream
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -275,7 +275,7 @@
   - NfsdBelt
   - NfsdEarsCream
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -296,7 +296,7 @@
   - ContractorBelt
   - NfsdEarsBrown
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -337,7 +337,7 @@
   - NfsdBelt
   - NfsdEarsAltGreen
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -358,7 +358,7 @@
   - NfsdBelt
   - NfsdEarsAltBrown
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorEncryptionKey
   - ContractorFun
@@ -380,7 +380,7 @@
   - NfsdBelt
   - SheriffEars
   - NfsdBoxSurvival
-  - ContractorPDACartridge
+  - ContractorCartridge
   - ContractorImplanter
   - ContractorFun
   - ContractorTrinkets
