--- a/Resources/Prototypes/DeltaV/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Devices/cartridges.yml
@@ -18,27 +18,6 @@
 #       sprite: DeltaV/Icons/cri.rsi
 #       state: cri
 
-# - type: entity # Frontier - Not Merged yet
-#   parent: BaseItem
-#   id: SecWatchCartridge
-#   name: sec watch cartridge
-#   description: A cartridge that tracks the status of currently wanted individuals.
-#   components:
-#   - type: Sprite
-#     sprite: DeltaV/Objects/Devices/cartridge.rsi
-#     state: cart-cri
-#   - type: Icon
-#     sprite: DeltaV/Objects/Devices/cartridge.rsi
-#     state: cart-cri
-#   - type: UIFragment
-#     ui: !type:SecWatchUi
-#   - type: Cartridge
-#     programName: sec-watch-program-name
-#     icon:
-#       sprite: Objects/Weapons/Melee/stunbaton.rsi
-#       state: stunbaton_on
-#   - type: SecWatchCartridge
-
 - type: entity
   parent: BaseItem
   id: MailMetricsCartridge
@@ -59,3 +38,5 @@
     icon:
       sprite: Nyanotrasen/Objects/Specific/Mail/mail.rsi
       state: icon
+    disposable: true # Frontier
+    autoInstall: true # Frontier
