--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
@@ -65,7 +65,7 @@
     state: pda-pilot
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: StcPDA
   name: station traffic controller PDA
   description: Declare emergencies in style!
@@ -93,7 +93,7 @@
     state: pda-stc
 
 - type: entity
-  parent: SecurityPDA
+  parent: BaseSecurityPDA
   id: SecurityGuardPDA
   name: security guard PDA
   description: Red to hide the stains of passenger blood.
@@ -121,7 +121,7 @@
         - Write
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: SheriffPDA
   name: sheriff PDA
   description: Whosoever bears this PDA is the law.
@@ -156,7 +156,7 @@
     state: pda-sheriff
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: CadetPDA
   name: cadet PDA
   description: Whosoever bears this PDA could be the law.
@@ -191,7 +191,7 @@
     state: pda-cadet
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: DeputyPDA
   name: deputy PDA
   description: Whosoever bears this PDA is close to being the law.
@@ -226,7 +226,7 @@
     state: pda-deputy
 
 - type: entity
-  parent: BaseMedicalPDA
+  parent: BaseSecurityPDA
   id: BrigmedicNFPDA
   name: brigmedic PDA
   description: Whosoever bears this PDA heals the law.
@@ -261,7 +261,7 @@
     state: pda-brigmed
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: SergeantPDA
   name: sergeant PDA
   description: Whosoever bears this PDA puts the law on their back.
@@ -296,7 +296,7 @@
     state: pda-sergeant
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: BailiffPDA
   name: bailiff PDA
   description: Whosoever bears this PDA puts the law on their back.
@@ -331,7 +331,7 @@
     state: pda-bailiff
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: NFDetectivePDA
   name: detective PDA
   description: Smells like rain... pouring down the rooftops...
@@ -365,7 +365,7 @@
     state: pda-nfdetective
 
 - type: entity
-  parent: BasePDA
+  parent: BaseSecurityPDA
   id: PublicAffairsLiaisonPDA
   name: public affairs liaison PDA
   description: Paperwork, paperwork, paperwork!
@@ -406,7 +406,7 @@
     state: pda-pal
 
 - type: entity
-  parent: HoPPDA
+  parent: BaseSecurityPDA
   id: SrPDA
   name: station representative PDA
   description: Looks like it's been clawed on.
@@ -438,13 +438,6 @@
   - type: Icon
     sprite: _NF/Objects/Devices/pda.rsi
     state: pda-sr
-  - type: CartridgeLoader
-    preinstalled:
-      - CrewManifestCartridge
-      - NotekeeperCartridge
-      - NewsReaderCartridge
-      - BountyContractsCartridge
-      - MailMetricsCartridge # DeltaV - Courier Performance
 
 - type: entity
   parent: PiratePDA
