--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -128,6 +128,7 @@
   - type: CargoSellBlacklist # Frontier: Liltenhead moment
 
 - type: entity
+  parent: BasePDA
   id: BaseSecurityPDA
   abstract: true
   components:
