Dead honey bee tree and bee jar with animation

--- a/Resources/Prototypes/_NF/Entities/Objects/Specific/Hydroponics/seeds.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Specific/Hydroponics/seeds.yml
@@ -181,7 +181,7 @@
 
 - type: entity
   parent: SeedBase
-  name: packet of bees
+  name: jar of bees
   description: Starter kit for a new apiarist
   id: BeesSeeds
   components:
