--- a/Resources/Prototypes/_NF/Guidebook/rules.yml
+++ b/Resources/Prototypes/_NF/Guidebook/rules.yml
@@ -17,7 +17,8 @@
     - FrontierRule9
     - FrontierRule10
     - FrontierRule11
-
+    - FrontierRule12
+    - FrontierRule13
 
 - type: guideEntry
   id: FrontierRuleZeroTolerance
@@ -70,23 +71,35 @@
 - type: guideEntry
   id: FrontierRule8
   name: guide-entry-frontier-rule-8
-  text: "/ServerInfo/_NF/Guidebook/Rules/8_Crimes.xml"
+  text: "/ServerInfo/_NF/Guidebook/Rules/8_PVP.xml"
   ruleEntry: true
 
 - type: guideEntry
   id: FrontierRule9
   name: guide-entry-frontier-rule-9
-  text: "/ServerInfo/_NF/Guidebook/Rules/9_Silicons.xml"
+  text: "/ServerInfo/_NF/Guidebook/Rules/9_Pirates.xml"
   ruleEntry: true
 
 - type: guideEntry
   id: FrontierRule10
   name: guide-entry-frontier-rule-10
-  text: "/ServerInfo/_NF/Guidebook/Rules/10_Security.xml"
+  text: "/ServerInfo/_NF/Guidebook/Rules/10_Crimes.xml"
   ruleEntry: true
 
 - type: guideEntry
   id: FrontierRule11
   name: guide-entry-frontier-rule-11
-  text: "/ServerInfo/_NF/Guidebook/Rules/11_Command.xml"
+  text: "/ServerInfo/_NF/Guidebook/Rules/11_Silicons.xml"
+  ruleEntry: true
+
+- type: guideEntry
+  id: FrontierRule12
+  name: guide-entry-frontier-rule-12
+  text: "/ServerInfo/_NF/Guidebook/Rules/12_Security.xml"
+  ruleEntry: true
+
+- type: guideEntry
+  id: FrontierRule13
+  name: guide-entry-frontier-rule-13
+  text: "/ServerInfo/_NF/Guidebook/Rules/13_Command.xml"
   ruleEntry: true
