--- a/Resources/Prototypes/_NF/Shipyard/spectre.yml
+++ b/Resources/Prototypes/_NF/Shipyard/spectre.yml
@@ -12,7 +12,7 @@
   id: Spectre
   name: NR Spectre
   description: A large, attractive but dated vessel with a pure focus on research and development. It is capable of generating anomalies.
-  price: 185000
+  price: 185000 # Anomaly spawner
   category: Large
   group: Shipyard
   shuttlePath: /Maps/_NF/Shuttles/spectre.yml
