Последние штрихи к ПРу

--- a/Resources/Maps/Corvax/Shuttles/Expedition/anchor.yml
+++ b/Resources/Maps/Corvax/Shuttles/Expedition/anchor.yml
@@ -10560,7 +10560,7 @@ entities:
     - type: Transform
       pos: 2.5,-11.5
       parent: 1
-- proto: SignShield
+- proto: SignShock
   entities:
   - uid: 1261
     components:
