--- a/Resources/Maps/Corvax/Shuttles/Nfsd/empress.yml
+++ b/Resources/Maps/Corvax/Shuttles/Nfsd/empress.yml
@@ -6158,7 +6158,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -0.5,-12.5
       parent: 1
-- proto: ChemDispensereEmpty
+- proto: ChemDispenserEmpty
   entities:
   - uid: 592
     components:
