--- a/Resources/Prototypes/Corvax/Shipyard/Medical/apothecary.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Medical/apothecary.yml
@@ -12,7 +12,7 @@
   id: Apothecary
   name: NM Апотекарий
   description: Малогабаритный медицинский шаттл. Рекомендованный состав команды 1-2 человека.
-  price: 31000 #Appraise value 27000 with markup for chemistry equipment and rounding. Feel free to adjust on the backend. Medics are always poor.
+  price: 45000 
   category: Small
   group: Shipyard
   shuttlePath: /Maps/Corvax/Shuttles/Medical/apothecary.yml
