--- a/Resources/Maps/Corvax/Shuttles/Nfsd/wasp.yml
+++ b/Resources/Maps/Corvax/Shuttles/Nfsd/wasp.yml
@@ -4369,7 +4369,7 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 3.5,13.5
       parent: 1
-- proto: ComputerSalvageExpedition
+- proto: BaseComputer
   entities:
   - uid: 656
     components:
