--- a/Resources/Prototypes/Corvax/Shipyard/Civilian/Aurora.yml
+++ b/Resources/Prototypes/Corvax/Shipyard/Civilian/Aurora.yml
@@ -1,4 +1,6 @@
-#Corvax Frontier
+# Corvax Frontier
+# Author: SergeantEcho
+# Discord: @sergeantecho 
 - type: vessel
   id: Aurora
   name: NC Аврора
@@ -6,8 +8,10 @@
   price: 133200
   category: Medium
   group: Shipyard
-  shuttlePath: /Maps/Corvax/Shuttles/Aurora.yml
+  shuttlePath: /Maps/Corvax/Shuttles/Civilian/Aurora.yml
   class:
+  - Science
+  - Chemistry
   - Civilian
 
 - type: gameMap
