--- a/Resources/Prototypes/_NF/Roles/Jobs/Fun/misc_startinggear.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Fun/misc_startinggear.yml
@@ -1,3 +1,19 @@
+# Aghost
+- type: startingGear
+  id: MFMobAghostGear
+  equipment:
+    back: ClothingBackpackSatchelHolding
+    id: MFAdminPDA
+  storage:
+    back:
+    - GasAnalyzer
+    - trayScanner
+    - AccessConfiguratorUniversal
+    - Multitool
+    - PowerDrill
+    - JawsOfLife
+    - WelderIndustrialAdvanced
+
 - type: startingGear
   id: MobClippyGear
   equipment:
