--- a/Resources/Prototypes/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/pda.yml
@@ -146,6 +146,7 @@
   parent: BasePDA
   id: BaseMedicalPDA
   abstract: true
+  # Frontier: cartridges moved to loadouts
   # components:
   # - type: CartridgeLoader
     # uiKey: enum.PdaUiKey.Key
@@ -154,6 +155,7 @@
       # - NotekeeperCartridge
       # - NewsReaderCartridge
       # - MedTekCartridge
+  # End Frontier
 
 - type: entity
   parent: BasePDA
