--- a/Resources/Prototypes/_NF/Roles/Jobs/Fun/misc_startinggear.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Fun/misc_startinggear.yml
@@ -3,7 +3,7 @@
   id: MFMobAghostGear
   equipment:
     back: ClothingBackpackSatchelHolding
-    id: MFAdminPDA
+    id: NFAdminPDA
   storage:
     back:
     - GasAnalyzer
