--- a/Resources/Prototypes/DeltaV/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Devices/cartridges.yml
@@ -1,5 +1,5 @@
 # - type: entity # Frontier - Not Merged yet
-#   parent: BaseItem
+#   parent: NFBasePDACartridge
 #   id: CrimeAssistCartridge
 #   name: crime assist cartridge
 #   description: A cartridge that helps identify crimes and see appropriate punishment.
@@ -19,7 +19,7 @@
 #       state: cri
 
 - type: entity
-  parent: BaseItem
+  parent: NFBasePDACartridge
   id: MailMetricsCartridge
   name: mail metrics cartridge
   description: A cartridge that tracks statistics related to mail deliveries.
@@ -38,6 +38,4 @@
     icon:
       sprite: Nyanotrasen/Objects/Specific/Mail/mail.rsi
       state: icon
-    disposable: true # Frontier
-    autoInstall: true # Frontier
     readonly: true # Frontier
