--- a/Resources/Prototypes/DeltaV/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/DeltaV/Entities/Objects/Devices/pda.yml
@@ -29,7 +29,7 @@
   - type: Icon
     sprite: _NF/Objects/Devices/pda.rsi # Frontier - DeltaV/Objects/Devices/pda.rsi<_NF/Objects/Devices/pda.rsi
     state: pda-mailcarrier
-  # - type: CartridgeLoader # DeltaV - Courier Performance
+  # - type: CartridgeLoader # DeltaV - Courier Performance # Frontier - pushed to cartridge loadouts
     # preinstalled:
       # - CrewManifestCartridge
       # - NotekeeperCartridge
