--- a/Resources/Prototypes/_NF/Roles/Jobs/Fun/misc_startinggear.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Fun/misc_startinggear.yml
@@ -1,6 +1,6 @@
 # Aghost
 - type: startingGear
-  id: MFMobAghostGear
+  id: NFMobAghostGear
   equipment:
     back: ClothingBackpackSatchelHolding
     id: NFAdminPDA
