fix Admin PDA cartridge references

--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/pda.yml
@@ -21,8 +21,8 @@
       - WantedListCartridge
       - LogProbeCartridge
       - MailMetricsCartridge
-      - ContractorAppraisalCartridge
-      - ContractorNetProbeCartridge
+      - AppraisalCartridge
+      - NetProbeCartridge
 
 - type: entity
   parent: BasePDA
