--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
@@ -267,6 +267,7 @@
 - type: entity
   parent: FoodBoxSushi
   id: FoodBoxSushiBad
+  suffix: Bad
   components:
   - type: StorageFill
     contents:
