--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/sushi.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/sushi.yml
@@ -129,7 +129,7 @@
     flavors:
       - fishy
       - cheap
-      - horrible
+      - bitter
   - type: Sprite
     state: gassushislice
   - type: SolutionContainerManager
