--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/sushi.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/sushi.yml
@@ -23,16 +23,14 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 40
+        maxVol: 42
         reagents:
         - ReagentId: Nutriment
-          Quantity: 20
-        - ReagentId: Flavorol
-          Quantity: 10
+          Quantity: 30
         - ReagentId: CucumberWater
-          Quantity: 2
+          Quantity: 3
   - type: SliceableFood
-    count: 5
+    count: 6
     slice: FoodMealAvocadoSushiSlice
 
 - type: entity
@@ -50,14 +48,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 8
+        maxVol: 7
         reagents:
         - ReagentId: Nutriment
-          Quantity: 4
-        - ReagentId: Flavorol
-          Quantity: 2
+          Quantity: 5
         - ReagentId: CucumberWater
-          Quantity: .4
+          Quantity: .5
   - type: Item
     size: Tiny
 
@@ -76,18 +72,16 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 45
+        maxVol: 48
         reagents:
         - ReagentId: Nutriment
-          Quantity: 20
-        - ReagentId: Flavorol
-          Quantity: 10
+          Quantity: 30
         - ReagentId: CarpoToxin
-          Quantity: 5
+          Quantity: 6
         - ReagentId: CucumberWater
-          Quantity: 2
+          Quantity: 3
   - type: SliceableFood
-    count: 5
+    count: 6
     slice: FoodMealCarpSushiSlice
 
 - type: entity
@@ -105,16 +99,14 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 9
+        maxVol: 8
         reagents:
         - ReagentId: Nutriment
-          Quantity: 4
-        - ReagentId: Flavorol
-          Quantity: 2
+          Quantity: 5
         - ReagentId: CarpoToxin
           Quantity: 1
         - ReagentId: CucumberWater
-          Quantity: .4
+          Quantity: .5
   - type: Item
     size: Tiny
 
@@ -135,10 +127,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 5
+        maxVol: 8
         reagents:
         - ReagentId: Nutriment
           Quantity: 5
+        - ReagentId: CucumberWater
+          Quantity: .5
   - type: Item
     size: Tiny
 
@@ -150,7 +144,9 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 5
+        maxVol: 8
         reagents:
         - ReagentId: GastroToxin
           Quantity: 5
+        - ReagentId: CucumberWater
+          Quantity: .5
