tray inhand sprites, remove tiles.yml (my mistake)

--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
@@ -250,6 +250,11 @@
     sprite: _NF/Objects/Consumable/Food/sushi.rsi
     scale: 0.8, 0.8
     size: Normal
+    inhandVisuals:
+      left:
+      - state: tray-inhand-left
+      right:
+      - state: tray-inhand-right
   - type: Storage
     grid:
     - 0,0,1,2
