box open noises, inhand sprite fix

--- a/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Consumable/Food/Containers/box.yml
@@ -261,6 +261,7 @@
     whitelist:
       tags:
         - Sushi
+    storageOpenSound: /Audio/Effects/packetrip.ogg
     hideStackVisualsWhenClosed: false
   - type: ItemCounter
     count:
