--- a/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
+++ b/Resources/Prototypes/_NF/Loadouts/contractor_loadout_groups.yml
@@ -592,6 +592,7 @@
   - ContractorClothingNeckCloakCap
   - ContractorClothingNeckCloakMiner
   - ContractorClothingNeckCloakMoth
+  - ContractorClothingNeckCloakRosyMoth
   - ContractorClothingNeckScarfChaplainStole
   - ContractorClothingNeckStoleChaplain
   - ContractorClothingNeckCloakTrans
