--- a/Resources/Prototypes/_NF/Catalog/Bounties/medical_bounties.yml
+++ b/Resources/Prototypes/_NF/Catalog/Bounties/medical_bounties.yml
@@ -1,44 +1,98 @@
 # Medical bounty prototypes, unidentified corpses may spawn with one of these damage prototypes.
-
 - type: medicalBounty
   id: MurderedBlunt
   damageSets:
     Blunt:
-      min: 200
+      min: 150
       max: 400
       value: 10
       penalty: 10
-  baseReward: 2000 # 4K-6K
+    Asphyxiation:
+      min: 50
+      max: 200
+      value: 10
+      penalty: 10
+  baseReward: 2000 # 4K-8K
 
 - type: medicalBounty
   id: MurderedPierce
   damageSets:
     Piercing:
-      min: 200
+      min: 150
       max: 400
       value: 10
       penalty: 10
-  baseReward: 2000 # 4K-6K
+    Bloodloss:
+      min: 50
+      max: 200
+      value: 10
+      penalty: 10
+  baseReward: 2000 # 4K-8K
 
 - type: medicalBounty
   id: MurderedSlash
   damageSets:
     Slash:
+      min: 150
+      max: 400
+      value: 10
+      penalty: 10
+    Bloodloss:
+      min: 50
+      max: 200
+      value: 10
+      penalty: 10
+  baseReward: 2000 # 4K-8K
+
+- type: medicalBounty
+  id: MildBruteMix
+  damageSets:
+    Blunt:
+      min: 75
+      max: 150
+      value: 10
+      penalty: 10
+    Piercing:
+      min: 75
+      max: 150
+      value: 10
+      penalty: 10
+    Slash:
+      min: 75
+      max: 150
+      value: 10
+      penalty: 10
+    Bloodloss:
+      min: 75
+      max: 150
+      value: 10
+      penalty: 10
+  baseReward: 2000 # 5K-8K
+
+- type: medicalBounty
+  id: Suffocated
+  damageSets:
+    Asphyxiation:
       min: 200
       max: 400
       value: 10
       penalty: 10
-  baseReward: 2000 # 4K-6K
+    Asphyxiation:
+      min: 50
+      max: 200
+      value: 10
+      penalty: 10
+  baseReward: 2000 # 4K-8K
 
 - type: medicalBounty
   id: PlasmaFire
   damageSets:
     Heat:
       min: 1000
-      max: 4000
-      value: 8
-      penalty: 8
-  baseReward: 2000 # 10K-34K
+      max: 3000
+      value: 10
+      penalty: 10
+  baseReward: 2000 # 10K-32K
 
 - type: medicalBounty
   id: Spaced
@@ -60,10 +114,35 @@
       penalty: 10
     Cold:
       min: 600
-      max: 4000
-      value: 5
-      penalty: 5
-  baseReward: 1000 # 5500-24K
+      max: 2000
+      value: 10
+      penalty: 10
+  baseReward: 1000 # 8500-24K
+
+- type: medicalBounty
+  id: MildBurnMix
+  damageSets:
+    Heat:
+      min: 50
+      max: 150
+      value: 10
+      penalty: 10
+    Cold:
+      min: 50
+      max: 150
+      value: 10
+      penalty: 10
+    Shock:
+      min: 50
+      max: 150
+      value: 10
+      penalty: 10
+    Caustic:
+      min: 50
+      max: 150
+      value: 10
+      penalty: 10
+  baseReward: 2000 # 4K-8K
 
 - type: medicalBounty
   id: Insuls
@@ -91,6 +170,26 @@
   baseReward: 2000 # 8K-12K
 
 - type: medicalBounty
+  id: SpiderAttackMild
+  damageSets:
+    Poison:
+      min: 100
+      max: 200
+      value: 15
+      penalty: 15
+    Asphyxiation:
+      min: 100
+      max: 200
+      value: 10
+      penalty: 10
+  reagents:
+    Mechanotoxin:
+      min: 30
+      max: 50
+      value: 20
+  baseReward: 3500 # 6600-10500
+
+- type: medicalBounty
   id: SpiderAttack
   damageSets:
     Poison:
@@ -109,22 +208,27 @@
   id: DeliciousMushroom
   damageSets:
     Poison:
-      min: 200
-      max: 400
+      min: 100
+      max: 200
       value: 15
       penalty: 15
+    Asphyxiation:
+      min: 100
+      max: 200
+      value: 10
+      penalty: 10
   reagents:
     Amatoxin:
       min: 30
       max: 50
-      value: 20
-  baseReward: 3000 # 6600-10K
+      value: 30
+  baseReward: 3000 # 6400-10500
 
 - type: medicalBounty
   id: HyperpacmanGoneWrong
   damageSets:
     Radiation:
-      min: 400
+      min: 150
       max: 800
       value: 15
       penalty: 15
@@ -133,7 +237,12 @@
       max: 140
       value: 25
       penalty: 25
-  baseReward: 1500 # 9K-15K
+    Asphyxiation:
+      min: 100
+      max: 200
+      value: 10
+      penalty: 10
+  baseReward: 1500 # ~6250-19K
 
 - type: medicalBounty
   id: AsphyxAndGenetic
@@ -149,3 +258,32 @@
       value: 25
       penalty: 25
   baseReward: 2000 # 5500-9500
+
+- type: medicalBounty
+  id: DeliciousUranium
+  damageSets:
+    Radiation:
+      min: 50
+      max: 300
+      value: 15
+      penalty: 15
+    Genetic:
+      min: 60
+      max: 100
+      value: 25
+      penalty: 25
+    Asphyxiation: # Value padding
+      min: 100
+      max: 200
+      value: 10
+      penalty: 10
+  reagents:
+    Uranium:
+      min: 30
+      max: 50
+      value: 25
+    Radium:
+      min: 30
+      max: 50
+      value: 25
+  baseReward: 1500 # 5300-13500
