Fix dupe Asphyxiation key

--- a/Resources/Prototypes/_NF/Catalog/Bounties/medical_bounties.yml
+++ b/Resources/Prototypes/_NF/Catalog/Bounties/medical_bounties.yml
@@ -73,11 +73,11 @@
   id: Suffocated
   damageSets:
     Asphyxiation:
-      min: 200
+      min: 150
       max: 400
       value: 10
       penalty: 10
-    Asphyxiation:
+    Bloodloss:
       min: 50
       max: 200
       value: 10
