--- a/Resources/Prototypes/_NF/Catalog/Bounties/medical_bounties.yml
+++ b/Resources/Prototypes/_NF/Catalog/Bounties/medical_bounties.yml
@@ -232,7 +232,7 @@
       max: 800
       value: 15
       penalty: 15
-    Genetic:
+    Cellular:
       min: 60
       max: 140
       value: 25
@@ -245,14 +245,14 @@
   baseReward: 1500 # ~6250-19K
 
 - type: medicalBounty
-  id: AsphyxAndGenetic
+  id: AsphyxAndCellular
   damageSets:
     Asphyxiation:
       min: 200
       max: 400
       value: 10
       penalty: 10
-    Genetic:
+    Cellular:
       min: 60
       max: 140
       value: 25
@@ -267,7 +267,7 @@
       max: 300
       value: 15
       penalty: 15
-    Genetic:
+    Cellular:
       min: 60
       max: 100
       value: 25
