boxer outfits with tank tops

--- a/Resources/Prototypes/_NF/Entities/Mobs/Corpses/loadouts.yml
+++ b/Resources/Prototypes/_NF/Entities/Mobs/Corpses/loadouts.yml
@@ -699,18 +699,18 @@
 - type: startingGear
   id: NFVisitorBoxer
   equipment:
-    jumpsuit: ClothingUniformRandomShorts
+    jumpsuit: UniformShortsRedWithTop
     shoes: ClothingShoesColorBlack
     gloves: ClothingHandsGlovesBoxingBlue
 
 - type: startingGear
   id: NFVisitorBoxerAlt
   equipment:
-    jumpsuit: ClothingUniformRandomShorts
+    jumpsuit: UniformShortsRedWithTop
     shoes: ClothingShoesColorBlack
     gloves: ClothingHandsGlovesBoxingRed
 
-- type: startingGear #!! make sure these are bible users.
+- type: startingGear
   id: NFVisitorChaplain
   equipment:
     jumpsuit: ClothingUniformJumpsuitChaplain
